--- a/deepfence_backend/dockerify/haproxy/haproxy.cfg
+++ b/deepfence_backend/dockerify/haproxy/haproxy.cfg
@@ -54,7 +54,7 @@ frontend port_443
 
 backend deepfence-ui-4042
     mode http
-    server s1 deepfence-ui:4042
+    server s1 ${UI_SERVICE_NAME}:4042
 
 backend deepfence-api-9998
     mode http
