Option to set elasticsearch user and password in helm values #394

--- a/deployment-scripts/helm-charts/deepfence-console/templates/service.yaml
+++ b/deployment-scripts/helm-charts/deepfence-console/templates/service.yaml
@@ -101,6 +101,7 @@ spec:
       protocol: TCP
       targetPort: 4041
 ---
+{{- if eq "true" .Values.runUIPod }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -118,6 +119,7 @@ spec:
       port: 4042
       protocol: TCP
       targetPort: 4042
+{{- end }}
 ---
 apiVersion: v1
 kind: Service
