Remove open-tracer

--- a/deepfence_agent/plugins/Makefile
+++ b/deepfence_agent/plugins/Makefile
@@ -1,12 +1,13 @@
-all: localinit proto bin/SecretScanner bin/open-tracer bin/package-scanner
+all: localinit proto bin/SecretScanner bin/package-scanner
+# bin/open-tracer
 
 localinit:
 	$(PWD)/bootstrap.sh
 
-bin/open-tracer: ./open-tracer/**/*.rs
-	(cd open-tracer/open-tracer-ebpf && cargo build --release)
-	(cd open-tracer/open-tracer-usr && OPEN_TRACER_EBPF_BIN_ABS_PATH=$(PWD)/open-tracer/target/bpfel-unknown-none/release/open-tracer-ebpf cargo build --release)
-	cp $(PWD)/open-tracer/target/release/open-tracer $(PWD)/bin
+#bin/open-tracer: ./open-tracer/**/*.rs
+#	(cd open-tracer/open-tracer-ebpf && cargo build --release)
+#	(cd open-tracer/open-tracer-usr && OPEN_TRACER_EBPF_BIN_ABS_PATH=$(PWD)/open-tracer/target/bpfel-unknown-none/release/open-tracer-ebpf cargo build --release)
+#	cp $(PWD)/open-tracer/target/release/open-tracer $(PWD)/bin
 
 bin/SecretScanner: ./SecretScanner/**/*.go
 	(cd SecretScanner && make)
@@ -22,10 +23,10 @@ proto: ./agent-plugins-grpc/proto/*.proto
 	cp agent-plugins-grpc/proto/*.go $(PWD)/proto
 
 clean:
-	-rm $(PWD)/bin/open-tracer
+	-#rm $(PWD)/bin/open-tracer
 	-rm $(PWD)/bin/SecretScanner
 	-rm $(PWD)/bin/package-scanner
-	cargo clean --manifest-path=./open-tracer/Cargo.toml
+	#cargo clean --manifest-path=./open-tracer/Cargo.toml
 	(cd agent-plugins-grpc && make clean)
 
 .PHONY: clean localinit
