secret scanner added to agent supervisor

--- a/deepfence_agent/supervisord.conf
+++ b/deepfence_agent/supervisord.conf
@@ -37,3 +37,13 @@ startsecs=0
 stopwaitsecs=30
 killasgroup=true
 priority=10
+
+[program:secret_scanner]
+command=bash -c "rm -rf /tmp/secret-scanner.sock && /home/deepfence/bin/SecretScanner --socket-path=/tmp/secret-scanner.sock"
+numprocs=1
+autostart=true
+autorestart=true
+startsecs=0
+stopwaitsecs=30
+killasgroup=true
+priority=10
