--- a/deployment-scripts/helm-charts/threatstryker-saas-customer/templates/configmaps/es_secrets.yaml
+++ b/deployment-scripts/helm-charts/threatstryker-saas-customer/templates/configmaps/es_secrets.yaml
@@ -8,9 +8,9 @@ data:
   {{- end }}
 kind: Secret 
 metadata:
-  name: "es-secret-{{ include "threatstryker-saas.fullname" . }}"
+  name: "es-secret-{{ include "deepfence-console.fullname" . }}"
   namespace: {{ .Values.namespace }}
   labels:
-    {{- include "threatstryker-saas.labels" . | nindent 4 }}
+    {{- include "deepfence-console.labels" . | nindent 4 }}
 type: Opaque
 {{- end }}
