--- a/deployment-scripts/helm-charts/threatstryker-saas-customer/templates/configmaps/on-prem-ssl-cert.yaml
+++ b/deployment-scripts/helm-charts/threatstryker-saas-customer/templates/configmaps/on-prem-ssl-cert.yaml
@@ -13,7 +13,7 @@ metadata:
   name: deepfence-ui-ssl-cert
   labels:
     app: deepfence-console
-    {{- include "threatstryker-saas.labels" . | nindent 4 }}
+    {{- include "deepfence-console.labels" . | nindent 4 }}
   namespace: {{ .Values.namespace }}
 data:
   deepfence.crt: |-
