--- a/deployment-scripts/helm-charts/threatstryker-saas-customer/templates/optional/pg_db_secrets.yaml
+++ b/deployment-scripts/helm-charts/threatstryker-saas-customer/templates/optional/pg_db_secrets.yaml
@@ -11,10 +11,10 @@ data:
   pg_ssl_mode: {{ .Values.db.postgresUserDb.sslmode | b64enc }}
 kind: Secret
 metadata:
-  name: "pg-secret-{{ include "threatstryker-saas.fullname" . }}"
+  name: "pg-secret-{{ include "deepfence-console.fullname" . }}"
   namespace: {{ .Values.namespace }}
   labels:
-    {{- include "threatstryker-saas.labels" . | nindent 4 }}
+    {{- include "deepfence-console.labels" . | nindent 4 }}
 type: Opaque
 {{- end }}
 {{- end }}
