--- a/deployment-scripts/helm-charts/threatstryker-saas-customer/templates/redis/service.yaml
+++ b/deployment-scripts/helm-charts/threatstryker-saas-customer/templates/redis/service.yaml
@@ -5,14 +5,14 @@ kind: Service
 metadata:
   name: deepfence-redis
   labels:
-    {{- include "threatstryker-saas.labels" . | nindent 4 }}
+    {{- include "deepfence-console.labels" . | nindent 4 }}
     app: deepfence-console
     name: deepfence-redis
   namespace: {{ .Values.namespace }}
 spec:
   type: {{ .Values.redis.service.type }}
   selector:
-    {{- include "threatstryker-saas.selectorLabels" . | nindent 4 }}
+    {{- include "deepfence-console.selectorLabels" . | nindent 4 }}
     name: deepfence-redis
 
   ports:
