--- a/deployment-scripts/helm-charts/threatstryker-saas-customer/templates/serviceAccounts/service_account.yaml
+++ b/deployment-scripts/helm-charts/threatstryker-saas-customer/templates/serviceAccounts/service_account.yaml
@@ -4,5 +4,5 @@ metadata:
   name: {{ .Values.serviceAccountName }}
   labels:
     app: deepfence-console
-    {{- include "threatstryker-saas.labels" . | nindent 4 }}
+    {{- include "deepfence-console.labels" . | nindent 4 }}
   namespace: {{ .Values.namespace }}
