--- a/deployment-scripts/helm-charts/threatstryker-saas-customer/templates/topology/service.yaml
+++ b/deployment-scripts/helm-charts/threatstryker-saas-customer/templates/topology/service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: deepfence-topology
   labels:
-    {{- include "threatstryker-saas.labels" . | nindent 4 }}
+    {{- include "deepfence-console.labels" . | nindent 4 }}
     app: deepfence-console
     name: deepfence-service
   namespace: {{ .Values.namespace }}
@@ -16,5 +16,5 @@ spec:
       targetPort: 8004
 
   selector:
-    {{- include "threatstryker-saas.selectorLabels" . | nindent 4 }}
+    {{- include "deepfence-console.selectorLabels" . | nindent 4 }}
     name: deepfence-topology
