--- a/deployment-scripts/helm-charts/threatstryker-saas-customer/templates/backend/deployment.yaml
+++ b/deployment-scripts/helm-charts/threatstryker-saas-customer/templates/backend/deployment.yaml
@@ -1,10 +1,10 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: backend-{{ include "threatstryker-saas.fullname" . }}
+  name: backend-{{ include "deepfence-console.fullname" . }}
   namespace: {{ .Values.namespace }}
   labels:
-    {{- include "threatstryker-saas.labels" . | nindent 4 }}
+    {{- include "deepfence-console.labels" . | nindent 4 }}
     app: deepfence-console
     name: deepfence-backend
 spec:
@@ -14,13 +14,13 @@ spec:
   selector:
     matchLabels:
       name: deepfence-backend
-      {{- include "threatstryker-saas.selectorLabels" . | nindent 6 }}
+      {{- include "deepfence-console.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       labels:
         app: deepfence-console
         name: deepfence-backend
-        {{- include "threatstryker-saas.selectorLabels" . | nindent 8 }}
+        {{- include "deepfence-console.selectorLabels" . | nindent 8 }}
     spec:
       imagePullSecrets:
         - name: {{ .Values.image.pullSecretName }}
@@ -50,78 +50,78 @@ spec:
             - name: POSTGRES_USER_DB_HOST
               valueFrom:
                 secretKeyRef:
-                  name: pg-secret-{{ include "threatstryker-saas.fullname" . }}
+                  name: pg-secret-{{ include "deepfence-console.fullname" . }}
                   key: pg_host
             - name: POSTGRES_USER_DB_PORT
               valueFrom:
                 secretKeyRef:
-                  name: pg-secret-{{ include "threatstryker-saas.fullname" . }}
+                  name: pg-secret-{{ include "deepfence-console.fullname" . }}
                   key: pg_port
             - name: POSTGRES_USER_DB_USER
               valueFrom:
                 secretKeyRef:
-                  name: pg-secret-{{ include "threatstryker-saas.fullname" . }}
+                  name: pg-secret-{{ include "deepfence-console.fullname" . }}
                   key: pg_user
             - name: POSTGRES_USER_DB_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: pg-secret-{{ include "threatstryker-saas.fullname" . }}
+                  name: pg-secret-{{ include "deepfence-console.fullname" . }}
                   key: pg_password
             - name: POSTGRES_USER_DB_NAME
               valueFrom:
                 secretKeyRef:
-                  name: pg-secret-{{ include "threatstryker-saas.fullname" . }}
+                  name: pg-secret-{{ include "deepfence-console.fullname" . }}
                   key: pg_users_db_name
             - name: POSTGRES_USER_DB_SSLMODE
               valueFrom:
                 secretKeyRef:
-                  name: pg-secret-{{ include "threatstryker-saas.fullname" . }}
+                  name: pg-secret-{{ include "deepfence-console.fullname" . }}
                   key: pg_ssl_mode
             - name: ELASTICSEARCH_HOST
               valueFrom:
                 configMapKeyRef:
-                  name: "main-cm-{{ include "threatstryker-saas.fullname" . }}"
+                  name: "main-cm-{{ include "deepfence-console.fullname" . }}"
                   key: elasticsearch_host
             - name: ELASTICSEARCH_PORT
               valueFrom:
                 configMapKeyRef:
-                  name: "main-cm-{{ include "threatstryker-saas.fullname" . }}"
+                  name: "main-cm-{{ include "deepfence-console.fullname" . }}"
                   key: elasticsearch_port
             - name: ELASTICSEARCH_SCHEME
               valueFrom:
                 configMapKeyRef:
-                  name: "main-cm-{{ include "threatstryker-saas.fullname" . }}"
+                  name: "main-cm-{{ include "deepfence-console.fullname" . }}"
                   key: es_scheme
             {{- if .Values.db.elasticsearch.user }}
             - name: ELASTICSEARCH_USER
               valueFrom:
                 secretKeyRef:
-                  name: "es-secret-{{ include "threatstryker-saas.fullname" . }}"
+                  name: "es-secret-{{ include "deepfence-console.fullname" . }}"
                   key: es_user
             {{- end }}
             {{- if .Values.db.elasticsearch.password }}
             - name: ELASTICSEARCH_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: "es-secret-{{ include "threatstryker-saas.fullname" . }}"
+                  name: "es-secret-{{ include "deepfence-console.fullname" . }}"
                   key: es_password
             {{- end }}
             {{- if eq "true" .Values.saas_deployment }}
             - name: CUSTOMER_UNIQUE_ID
               valueFrom:
                 secretKeyRef:
-                  name: "es-secret-{{ include "threatstryker-saas.fullname" . }}"
+                  name: "es-secret-{{ include "deepfence-console.fullname" . }}"
                   key: es_customer_unique_id
             {{- end }}
             - name: REDIS_HOST
               valueFrom:
                 configMapKeyRef:
-                  name: "main-cm-{{ include "threatstryker-saas.fullname" . }}"
+                  name: "main-cm-{{ include "deepfence-console.fullname" . }}"
                   key: redis_host
             - name: REDIS_PORT
               valueFrom:
                 configMapKeyRef:
-                  name: "main-cm-{{ include "threatstryker-saas.fullname" . }}"
+                  name: "main-cm-{{ include "deepfence-console.fullname" . }}"
                   key: redis_port
           resources:
             {{- toYaml .Values.backend.resources | nindent 12 }}
