--- a/deployment-scripts/helm-charts/threatstryker-saas-customer/templates/configmaps/deepfence-cert.yaml
+++ b/deployment-scripts/helm-charts/threatstryker-saas-customer/templates/configmaps/deepfence-cert.yaml
@@ -9,5 +9,5 @@ metadata:
   name: deepfence-cert
   namespace: {{ .Values.namespace }}
   labels:
-    {{- include "threatstryker-saas.labels" . | nindent 4 }}
+    {{- include "deepfence-console.labels" . | nindent 4 }}
 {{- end }}
