--- a/deployment-scripts/helm-charts/threatstryker-saas-customer/templates/diagnosis/deployment.yaml
+++ b/deployment-scripts/helm-charts/threatstryker-saas-customer/templates/diagnosis/deployment.yaml
@@ -1,10 +1,10 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: diagnosis-{{ include "threatstryker-saas.fullname" . }}
+  name: diagnosis-{{ include "deepfence-console.fullname" . }}
   namespace: {{ .Values.namespace }}
   labels:
-    {{- include "threatstryker-saas.labels" . | nindent 4 }}
+    {{- include "deepfence-console.labels" . | nindent 4 }}
     app: deepfence-console
     name: deepfence-diagnosis
 spec:
@@ -14,13 +14,13 @@ spec:
   selector:
     matchLabels:
       name: deepfence-diagnosis
-      {{- include "threatstryker-saas.selectorLabels" . | nindent 6 }}
+      {{- include "deepfence-console.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       labels:
         app: deepfence-console
         name: deepfence-diagnosis
-        {{- include "threatstryker-saas.selectorLabels" . | nindent 8 }}
+        {{- include "deepfence-console.selectorLabels" . | nindent 8 }}
     spec:
       imagePullSecrets:
         - name: {{ .Values.image.pullSecretName }}
