--- a/deployment-scripts/helm-charts/threatstryker-saas-customer/templates/diagnosis/service.yaml
+++ b/deployment-scripts/helm-charts/threatstryker-saas-customer/templates/diagnosis/service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: deepfence-diagnosis
   labels:
-    {{- include "threatstryker-saas.labels" . | nindent 4 }}
+    {{- include "deepfence-console.labels" . | nindent 4 }}
     app: deepfence-console
     name: deepfence-diagnosis
   namespace: {{ .Values.namespace }}
@@ -15,5 +15,5 @@ spec:
       protocol: TCP
       targetPort: 8009
   selector:
-    {{- include "threatstryker-saas.selectorLabels" . | nindent 4 }}
+    {{- include "deepfence-console.selectorLabels" . | nindent 4 }}
     name: deepfence-diagnosis
