--- a/deployment-scripts/helm-charts/threatstryker-saas-customer/templates/image_pull_secret.yaml
+++ b/deployment-scripts/helm-charts/threatstryker-saas-customer/templates/image_pull_secret.yaml
@@ -6,7 +6,7 @@ metadata:
   name: docker-deepfence-secret
   labels:
     app: deepfence-console
-    {{- include "threatstryker-saas.labels" . | nindent 4 }}
+    {{- include "deepfence-console.labels" . | nindent 4 }}
   namespace: {{ .Values.namespace }}
 type: kubernetes.io/dockerconfigjson
 data:
