--- a/deployment-scripts/helm-charts/threatstryker-saas-customer/templates/internalrouter/service.yaml
+++ b/deployment-scripts/helm-charts/threatstryker-saas-customer/templates/internalrouter/service.yaml
@@ -4,14 +4,14 @@ kind: Service
 metadata:
   name: deepfence-internal-router
   labels:
-    {{- include "threatstryker-saas.labels" . | nindent 4 }}
+    {{- include "deepfence-console.labels" . | nindent 4 }}
     app: deepfence-console
     name: deepfence-internal-router
   namespace: {{ .Values.namespace }}
 spec:
   type: ClusterIP
   selector:
-    {{- include "threatstryker-saas.selectorLabels" . | nindent 4 }}
+    {{- include "deepfence-console.selectorLabels" . | nindent 4 }}
     name: deepfence-internal-router
   ports:
   - name: https-port
