--- a/deployment-scripts/helm-charts/threatstryker-saas-customer/templates/namespace.yaml
+++ b/deployment-scripts/helm-charts/threatstryker-saas-customer/templates/namespace.yaml
@@ -2,5 +2,5 @@ apiVersion: v1
 kind: Namespace
 metadata:
   labels:
-    {{- include "threatstryker-saas.labels" . | nindent 4 }}
+    {{- include "deepfence-console.labels" . | nindent 4 }}
   name: {{ .Values.namespace }}
