--- a/deployment-scripts/helm-charts/threatstryker-saas-customer/templates/redis/deployment.yaml
+++ b/deployment-scripts/helm-charts/threatstryker-saas-customer/templates/redis/deployment.yaml
@@ -3,10 +3,10 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: redis-{{ include "threatstryker-saas.fullname" . }}
+  name: redis-{{ include "deepfence-console.fullname" . }}
   namespace: {{ .Values.namespace }}
   labels:
-    {{- include "threatstryker-saas.labels" . | nindent 4 }}
+    {{- include "deepfence-console.labels" . | nindent 4 }}
     app: deepfence-console
     name: deepfence-redis
 spec:
@@ -14,13 +14,13 @@ spec:
   selector:
     matchLabels:
       name: deepfence-redis
-      {{- include "threatstryker-saas.selectorLabels" . | nindent 6 }}
+      {{- include "deepfence-console.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       labels:
         app: deepfence-console
         name: deepfence-redis
-        {{- include "threatstryker-saas.selectorLabels" . | nindent 8 }}
+        {{- include "deepfence-console.selectorLabels" . | nindent 8 }}
     spec:
       initContainers:
       - name: init-sysctl
