--- a/deployment-scripts/helm-charts/threatstryker-saas-customer/templates/router/service.yaml
+++ b/deployment-scripts/helm-charts/threatstryker-saas-customer/templates/router/service.yaml
@@ -4,7 +4,7 @@ kind: Service
 metadata:
   name: deepfence-router
   labels:
-    {{- include "threatstryker-saas.labels" . | nindent 4 }}
+    {{- include "deepfence-console.labels" . | nindent 4 }}
     app: deepfence-console
     name: deepfence-router
   namespace: {{ .Values.namespace }}
