--- a/deployment-scripts/helm-charts/threatstryker-saas-customer/templates/secretscanner/deployment.yaml
+++ b/deployment-scripts/helm-charts/threatstryker-saas-customer/templates/secretscanner/deployment.yaml
@@ -1,10 +1,10 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: secret-scaner-{{ include "threatstryker-saas.fullname" . }}
+  name: secret-scaner-{{ include "deepfence-console.fullname" . }}
   namespace: {{ .Values.namespace }}
   labels:
-    {{- include "threatstryker-saas.labels" . | nindent 4 }}
+    {{- include "deepfence-console.labels" . | nindent 4 }}
     app: deepfence-console
     name: deepfence-secret-scanner
 spec:
@@ -14,13 +14,13 @@ spec:
   selector:
     matchLabels:
       name: deepfence-secret-scanner
-      {{- include "threatstryker-saas.selectorLabels" . | nindent 6 }}
+      {{- include "deepfence-console.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       labels:
         app: deepfence-console
         name: deepfence-secret-scanner
-        {{- include "threatstryker-saas.selectorLabels" . | nindent 8 }}
+        {{- include "deepfence-console.selectorLabels" . | nindent 8 }}
     spec:
       imagePullSecrets:
         - name: {{ .Values.image.pullSecretName }}
@@ -36,7 +36,7 @@ spec:
             - name: CUSTOMER_UNIQUE_ID
               valueFrom:
                 secretKeyRef:
-                  name: "es-secret-{{ include "threatstryker-saas.fullname" . }}"
+                  name: "es-secret-{{ include "deepfence-console.fullname" . }}"
                   key: es_customer_unique_id
           {{- end }}
           args: ["-config-path", "/home/deepfence/usr", "-http-port", "8011"]
