--- a/deployment-scripts/helm-charts/threatstryker-saas-customer/templates/topology/deployment.yaml
+++ b/deployment-scripts/helm-charts/threatstryker-saas-customer/templates/topology/deployment.yaml
@@ -1,10 +1,10 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: topology-{{ include "threatstryker-saas.fullname" . }}
+  name: topology-{{ include "deepfence-console.fullname" . }}
   namespace: {{ .Values.namespace }}
   labels:
-    {{- include "threatstryker-saas.labels" . | nindent 4 }}
+    {{- include "deepfence-console.labels" . | nindent 4 }}
     app: deepfence-console
     name: deepfence-topology
 spec:
@@ -14,13 +14,13 @@ spec:
   selector:
     matchLabels:
       name: deepfence-topology
-      {{- include "threatstryker-saas.selectorLabels" . | nindent 6 }}
+      {{- include "deepfence-console.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       labels:
         app: deepfence-console
         name: deepfence-topology
-        {{- include "threatstryker-saas.selectorLabels" . | nindent 8 }}
+        {{- include "deepfence-console.selectorLabels" . | nindent 8 }}
     spec:
       imagePullSecrets:
         - name: {{ .Values.image.pullSecretName }}
@@ -31,48 +31,48 @@ spec:
             - name: ELASTICSEARCH_HOST
               valueFrom:
                 configMapKeyRef:
-                  name: "main-cm-{{ include "threatstryker-saas.fullname" . }}"
+                  name: "main-cm-{{ include "deepfence-console.fullname" . }}"
                   key: elasticsearch_host
             - name: ELASTICSEARCH_PORT
               valueFrom:
                 configMapKeyRef:
-                  name: "main-cm-{{ include "threatstryker-saas.fullname" . }}"
+                  name: "main-cm-{{ include "deepfence-console.fullname" . }}"
                   key: elasticsearch_port
             - name: ELASTICSEARCH_SCHEME
               valueFrom:
                 configMapKeyRef:
-                  name: "main-cm-{{ include "threatstryker-saas.fullname" . }}"
+                  name: "main-cm-{{ include "deepfence-console.fullname" . }}"
                   key: es_scheme
             {{- if .Values.db.elasticsearch.user }}
             - name: ELASTICSEARCH_USER
               valueFrom:
                 secretKeyRef:
-                  name: "es-secret-{{ include "threatstryker-saas.fullname" . }}"
+                  name: "es-secret-{{ include "deepfence-console.fullname" . }}"
                   key: es_user
             {{- end }}
             {{- if .Values.db.elasticsearch.password }}
             - name: ELASTICSEARCH_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: "es-secret-{{ include "threatstryker-saas.fullname" . }}"
+                  name: "es-secret-{{ include "deepfence-console.fullname" . }}"
                   key: es_password
             {{- end }}
             {{- if eq "true" .Values.saas_deployment }}
             - name: CUSTOMER_UNIQUE_ID
               valueFrom:
                 secretKeyRef:
-                  name: "es-secret-{{ include "threatstryker-saas.fullname" . }}"
+                  name: "es-secret-{{ include "deepfence-console.fullname" . }}"
                   key: es_customer_unique_id
             {{- end }}
             - name: REDIS_HOST
               valueFrom:
                 configMapKeyRef:
-                  name: "main-cm-{{ include "threatstryker-saas.fullname" . }}"
+                  name: "main-cm-{{ include "deepfence-console.fullname" . }}"
                   key: redis_host
             - name: REDIS_PORT
               valueFrom:
                 configMapKeyRef:
-                  name: "main-cm-{{ include "threatstryker-saas.fullname" . }}"
+                  name: "main-cm-{{ include "deepfence-console.fullname" . }}"
                   key: redis_port
           image: "{{ .Values.topology.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.topology.image.pullPolicy }}
