add kafka & rest proxy

--- a/deepfence_backend/dockerify/haproxy/haproxy.cfg
+++ b/deepfence_backend/dockerify/haproxy/haproxy.cfg
@@ -50,6 +50,9 @@ frontend port_443
     acl is_fetcher_api path -i -m beg /df-api
     use_backend fetcher-api-8006 if is_fetcher_api
 
+    acl is_ingest path -i -m beg /ingest
+    use_backend deepfence-rest-proxy-8082 if is_ingest
+
     default_backend deepfence-ui-4042
 
 backend deepfence-ui-4042
@@ -160,6 +163,13 @@ backend fetcher-api-8006
     # http-response set-header X-Permitted-Cross-Domain-Policies "none"
     # http-response set-header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization, deepfence-key, x-hosts, cache-control"
     server s1 deepfence-fetcher:8006
+
+backend deepfence-rest-proxy-8082
+    mode http
+    http-request lua.deepfence-key-verify
+    http-request deny unless { var(txn.authorized) eq "true" } || { var(txn.authorized) eq "not_enabled" }
+    http-request set-path "%[path,regsub(^/ingest/,/)]"
+    server s1 deepfence-rest-proxy:8082
 
 backend options_method_handler
     mode http
