--- a/deepfence_backend/dockerify/haproxy/haproxy.cfg
+++ b/deepfence_backend/dockerify/haproxy/haproxy.cfg
@@ -168,6 +168,7 @@ backend deepfence-rest-proxy-8082
     mode http
     http-request lua.deepfence-key-verify
     http-request deny unless { var(txn.authorized) eq "true" } || { var(txn.authorized) eq "not_enabled" }
+    # remove leading /ingest from url
     http-request set-path "%[path,regsub(^/ingest/,/)]"
     server s1 deepfence-rest-proxy:8082
 
