fix haproxy url path rewrite for rest-proxy

--- a/deepfence_backend/dockerify/haproxy/haproxy.cfg
+++ b/deepfence_backend/dockerify/haproxy/haproxy.cfg
@@ -169,7 +169,7 @@ backend deepfence-rest-proxy-8082
     http-request lua.deepfence-key-verify
     http-request deny unless { var(txn.authorized) eq "true" } || { var(txn.authorized) eq "not_enabled" }
     # remove leading /ingest from url
-    http-request set-path "%[path,regsub(^/ingest/,/)]"
+    http-request replace-path /ingest(.*) \1
     server s1 deepfence-rest-proxy:8082
 
 backend options_method_handler
