--- a/deepfence_backend/dockerify/api/Dockerfile
+++ b/deepfence_backend/dockerify/api/Dockerfile
@@ -1,8 +1,12 @@
 FROM golang:1.18-bullseye AS build
 
-WORKDIR /go/logstashPubSubReader
-ADD tasks/logstashPubSubReader /go/logstashPubSubReader/
-RUN go build -o logstashPubSubReader .
+# WORKDIR /go/logstashPubSubReader
+# ADD tasks/logstashPubSubReader /go/logstashPubSubReader/
+# RUN go build -o logstashPubSubReader .
+
+WORKDIR /go/reportHandler
+ADD tasks/reportHandler /go/reportHandler/
+RUN go build -o reportHandler .
 
 FROM steampipe_build:latest AS steampipe-build
 
@@ -70,7 +74,8 @@ ADD supervisord_celery.conf /etc/supervisor/supervisord_celery.conf
 ADD supervisord_api.conf /etc/supervisor/supervisord_api.conf
 
 COPY . /app/code
-COPY --from=build /go/logstashPubSubReader/logstashPubSubReader /app/code/tasks/logstashPubSubReader/logstashPubSubReader
+# COPY --from=build /go/logstashPubSubReader/logstashPubSubReader /app/code/tasks/logstashPubSubReader/logstashPubSubReader
+COPY --from=build /go/reportHandler/reportHandler /app/code/tasks/reportHandler/reportHandler
 
 RUN chmod +x /app/code/dockerify/api/entrypoint.sh /app/code/dockerify/api/init_es_config.sh /app/code/dockerify/celery/entrypoint.sh /app/code/dockerify/backend/entrypoint.sh \
     && rm -f /app/code/.gitignore /app/code/requirements.txt \
