--- a/deployment-scripts/helm-charts/deepfence-console-new/templates/internalrouter/deployment.yaml
+++ b/deployment-scripts/helm-charts/deepfence-console-new/templates/internalrouter/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion:  apps/v1
 kind: Deployment
 metadata:
-  name: introuter-{{ include "deepfence-console.fullname" . }}
+  name: deepfence-introuter
   namespace: {{ .Values.namespace }}
   labels:
     app: deepfence-console
