--- a/deployment-scripts/helm-charts/deepfence-console-new/values.yaml
+++ b/deployment-scripts/helm-charts/deepfence-console-new/values.yaml
@@ -343,6 +343,7 @@ fetcher:
     type: ClusterIP
 
 router:
+  uiServiceName: "deepfence-ui"
   replicaCount: 1
   image:
     repository: deepfenceio/deepfence_router_ce
