--- a/deployment-scripts/helm-charts/deepfence-console-new/templates/packagescanner/deployment.yaml
+++ b/deployment-scripts/helm-charts/deepfence-console-new/templates/packagescanner/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion:  apps/v1
 kind: Deployment
 metadata:
-  name: package-scanner-{{ include "deepfence-console.fullname" . }}
+  name: deepfence-package-scanner
   namespace: {{ .Values.namespace }}
   labels:
     {{- include "deepfence-console.labels" . | nindent 4 }}
