--- a/deployment-scripts/helm-charts/deepfence-console-new/templates/redis/deployment.yaml
+++ b/deployment-scripts/helm-charts/deepfence-console-new/templates/redis/deployment.yaml
@@ -3,7 +3,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: redis-{{ include "deepfence-console.fullname" . }}
+  name: deepfence-redis
   namespace: {{ .Values.namespace }}
   labels:
     {{- include "deepfence-console.labels" . | nindent 4 }}
