--- a/deployment-scripts/helm-charts/deepfence-console-new/templates/router/deployment.yaml
+++ b/deployment-scripts/helm-charts/deepfence-console-new/templates/router/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: router-{{ include "deepfence-console.fullname" . }}
+  name: deepfence-router
   namespace: {{ .Values.namespace }}
   labels:
     app: deepfence-console
