--- a/deployment-scripts/helm-charts/deepfence-console-new/templates/packagescanner/deployment.yaml
+++ b/deployment-scripts/helm-charts/deepfence-console-new/templates/packagescanner/deployment.yaml
@@ -8,8 +8,8 @@ metadata:
     app: deepfence-console
     name: deepfence-package-scanner
 spec:
-  {{- if not .Values.pscaner.autoscaling.enabled }}
-  replicas: {{ .Values.pscaner.replicaCount }}
+  {{- if not .Values.packageScanner.autoscaling.enabled }}
+  replicas: {{ .Values.packageScanner.replicaCount }}
   {{- end }}
   selector:
     matchLabels:
@@ -26,8 +26,8 @@ spec:
         - name: {{ .Values.image.pullSecretName }}
       containers:
         - name: deepfence-package-scanner
-          imagePullPolicy: {{ .Values.pscaner.image.pullPolicy }}
-          image: "{{ .Values.pscaner.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+          imagePullPolicy: {{ .Values.packageScanner.image.pullPolicy }}
+          image: "{{ .Values.packageScanner.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           command: ["/usr/local/bin/package-scanner"]
           args: ["-mode", "http-server", "-port", "8005"]
           env:
@@ -47,4 +47,4 @@ spec:
           ports:
           - containerPort: 8005
           resources:
-              {{- toYaml .Values.pscaner.resources | nindent 12 }}
+              {{- toYaml .Values.packageScanner.resources | nindent 12 }}
